apps/production/forgejo/velero_backup_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: forgejo-data,forgejo-config
